# fastapp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/: .gitignore  .mypy.ini  .ruff.toml  __init__.py  alembic.ini  main.py
backend/alembic/: env.py
backend/app/: __init__.py  router.py
backend/app/admin/api/: router.py
backend/app/admin/api/v1/auth/: __init__.py  auth.py  captcha.py
backend/app/admin/api/v1/log/: __init__.py  login_log.py  opera_log.py
backend/app/admin/api/v1/monitor/: __init__.py  online.py
backend/app/admin/api/v1/sys/: __init__.py  data_rule.py  data_scope.py  dept.py  files.py  menu.py  role.py  user.py
backend/app/admin/crud/: crud_data_rule.py  crud_data_scope.py  crud_dept.py  crud_login_log.py  crud_menu.py  crud_opera_log.py  crud_role.py  crud_user.py
backend/app/admin/model/: __init__.py  data_rule.py  data_scope.py  dept.py  login_log.py  menu.py  opera_log.py  role.py  user.py
backend/app/admin/schema/: captcha.py  dept.py  menu.py  token.py  user.py
backend/app/admin/service/: auth_service.py  data_rule_service.py  data_scope_service.py  dept_service.py  menu_service.py  role_service.py  user_service.py
backend/common/: enums.py  i18n.py  log.py  model.py  pagination.py  queue.py  schema.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py  permission.py  rbac.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db.py
backend/middleware/: access_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py
backend/sql/mysql/: create_database.sql
backend/utils/: build_tree.py  demo_site.py  file_ops.py  health_check.py  import_parse.py  re_verify.py  request_parse.py  serializers.py  server_info.py  snowflake.py
