[project]
name = "fastapp"
version = "0.0.1"
description = "A FastAPI project template with SQLAlchemy and MySQL, including user authentication, authorization, and role-based access control."
authors = [
    {name = "Wagner", email = "im.wagnerchou@gmail.com"},
]
dependencies = [
    "alembic>=1.13.1",
    "asyncmy>=0.2.9",
    "bcrypt>=4.1.3",
    "cryptography>=42.0.7",
    "email-validator>=2.1.1",
    "fast-captcha>=0.2.1",
    "fastapi[all]>=0.111.0",
    "fastapi-limiter>=0.1.6",
    "fastapi-pagination>=0.12.24",
    "loguru>=0.7.2",
    "path>=16.14.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.4",
    "sqlalchemy>=2.0.30",
    "tzdata>=2024.1",
    "sqlalchemy-crud-plus>=1.6.0",
    "pwdlib>=0.2.1",
    "msgspec>=0.19.0",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "async-timeout==5.0.1 ; python_full_version < '3.11.3'",
    "certifi>=2025.1.31",
    "cffi==1.17.1 ; platform_python_implementation != 'PyPy'",
    "cfgv>=3.4.0",
    "click>=8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "distlib>=0.3.9",
    "dnspython>=2.7.0",
    "ecdsa>=0.19.1",
    "exceptiongroup==1.2.2 ; python_full_version < '3.11'",
    "fastapi-cli>=0.0.7",
    "filelock>=3.18.0",
    "greenlet==3.1.1 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "h11>=0.14.0",
    "hiredis>=3.1.0",
    "httpcore>=1.0.7",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "identify>=2.6.9",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mako>=1.3.9",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "nodeenv>=1.9.1",
    "orjson>=3.10.16",
    "pillow>=9.5.0",
    "platformdirs>=4.3.7",
    "pre-commit>=4.2.0",
    "pyasn1>=0.6.1",
    "pycparser==2.22 ; platform_python_implementation != 'PyPy'",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.8.1",
    "pygments>=2.19.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rich-toolkit>=0.14.1",
    "rsa>=4.9",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "starlette>=0.37.2",
    "typer>=0.15.2",
    "typing-extensions>=4.13.1",
    "typing-inspection>=0.4.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "virtualenv>=20.30.0",
    "watchfiles>=1.0.5",
    "websockets>=15.0.1",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
    "mypy>=1.18.1",
    "asgi-correlation-id>=4.3.4",
    "ip2loc>=1.0.0",
    "user-agents>=2.2.0",
    "asgiref>=3.9.2",
    "psutil>=7.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
lint = [
    "pre-commit>=4.0.0",
]
server = [
    "gunicorn>=21.2.0",
    "wait-for-it>=2.2.2",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
